--- a/superrentals/ember/app/index.html
+++ b/superrentals/ember/app/index.html
@@ -20,7 +20,7 @@
     <h1 id="name"></h1>
     <pre id="content"></pre>
     <script>
-      const name = 'app/config/environment'
+      const name = 'superrentals/config/environment'
       const content = JSON.parse(decodeURIComponent(document
         .querySelector(`[name="${name}"]`)
         .getAttribute('content')));
